fix: enhance payments view with instructional text for clarity; update styling for improved visibility and user experience

--- a/public/assets/css/seniorCounsel/payments.css
+++ b/public/assets/css/seniorCounsel/payments.css
@@ -8,15 +8,31 @@ body {
   padding: 0;
   background: #E4E9F7;
 }
+.payment-header{
+    text-align: center;
+}
 .payment-header h1{
     text-align: center;
-    color: #ffffff;
-    background-color: rgb(29, 27, 49);
-    font-size: 20px;
+    color: #1d1b31;
+    background-color: #f4f8ff;
+    font-size: 30px;
     margin-bottom: 10px;
     padding: 10px;
+    padding-top: 30px;
     text-transform: uppercase;
     /* font-style: italic; */
+    text-align: center;
+}
+.payment-paragraph{
+    text-align: center;
+}
+.payment-paragraph p{
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 5px;
+    line-height: 1.6;
+    text-align: center;
+    padding: 0 20px;
 }
 
 .pay_container{
@@ -28,14 +44,6 @@ body {
     border-radius: 20px;
 }
 
-h1 {
-    text-align: center;
-    font-size: 25px;
-    font-weight: 700;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    color: #333;
-}
 
 /* Card Row Styling */
 .card-row {
@@ -148,7 +156,7 @@ button {
   background-color: #fa9800;
   color: #fff;
   text-decoration: none;
-  border-radius: 4px;
+  border-radius: 8px;
   margin-top: 10px;
   border: none;
   font-size: 15px;
